# hair-booking

./: .dockerignore  Cargo.toml  Dockerfile
src/: database.rs  layer.rs  main.rs  model.rs  router.rs
src/model/: api_doc.rs  claim.rs  database.rs  error.rs  response.rs
src/model/response/: response_message.rs
src/router/: general.rs  public.rs
src/service/: account.rs
src/service/account/: get_profile.rs  sign_in.rs
